
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static int _4bri_is_rev_2_bri_card(int card_ordinal)
{
 switch (card_ordinal) {
 case 129:
 case 130:
 case 128:
  return (1);
 }
 return (0);
}
